@@ -3,3 +3,4 @@
 .vscode
 src/Environment/timestamp.h
 src/Environment/compilationdata.h
+NTPconf.h
