@@ -14,6 +14,7 @@ board = ttgo-t-watch
 framework = arduino
 lib_deps =
 	xinyuan-lilygo/TTGO TWatch Library@^1.4.2
+	arduino-libraries/NTPClient@^3.2.1
 extra_scripts = pre:scripts/createTimestampFile.py
 build_flags = -std=gnu++17
 	-DCONFIG_COMPILER_OPTIMIZATION=--O0
