@@ -9,6 +9,12 @@
 #include "BuildDateTime.h"
 #include "Core/Registry.h"
 
+#if __has_include("NTPconf.h")
+	#include "NTPconf.h"
+	#include "Network/NTP.h"
+	#define NTPCONF
+#endif
+
 bool RunAfterCompilation::handle() {
 	RunAfterCompilation *handler = new RunAfterCompilation();
 	if (handler->isFirstRun()) {
@@ -32,9 +38,20 @@ bool RunAfterCompilation::isFirstRun() {
 
 void RunAfterCompilation::afterFirstRunOperations() {
 	//set date & time
-	TTGOClass::getWatch()->rtc->setDateTime(BUILD_YEAR, BUILD_MONTH, BUILD_DAY, BUILD_HOUR, BUILD_MIN, BUILD_SEC);
+	#ifdef NTPCONF
+		if (!NTP::syncTime()) {
+			this->configureRTCviaBuildTime();
+		}
+	#endif
+	#ifndef NTPCONF
+		this->configureRTCviaBuildTime();
+	#endif
 }
 
 void RunAfterCompilation::markFirstRunIsOver() {
 	Registry::getInstance()->setValue(REGISTRY_BUILD_TIMESTAMP, compilationTimestamp);
+}
+
+void RunAfterCompilation::configureRTCviaBuildTime() {
+	TTGOClass::getWatch()->rtc->setDateTime(BUILD_YEAR, BUILD_MONTH, BUILD_DAY, BUILD_HOUR, BUILD_MIN, BUILD_SEC);
 }
