@@ -1,0 +1,9 @@
+#pragma once
+
+class NTP {
+
+	public:
+
+		static bool syncTime();
+
+};
